--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Oswald|Raleway:400,700|Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link href="resume.css" type="text/css" rel="stylesheet"/>
   </head>
